--- a/css/portal.css
+++ b/css/portal.css
@@ -24,18 +24,28 @@ h1 {
 }
 
 main.wrapper {
-    background-color: #2b7a78;
+    background-color: #17252a;
     overflow: auto;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
 p {
     margin: 1em; /* Top Right Bottom Left (TRBL) */
+    color: white;
+    font-size: large;
 }
 
 h2,h3 {
     font-weight: normal;
     margin-left: 1em;
     line-height: 1em;
+    color: white;
 }
 
 a {
